<resources>
    <string name="app_name">English IT</string>
    <string name="login__title">¡Bienvenido!</string>
    <string name="login__aventura">¡Empieza la aventura!</string>
    <string name="login__email_hint">Correo electrónico</string>
    <string name="login__password_hint">Contraseña</string>
    <string name="login__login_button">Iniciar sesión</string>
    <string name="login__signup_text">¿Aún no tienes cuenta?</string>
    <string name="login__signup_button">Crear cuenta</string>

    <string name="login__error_user_no_registered">No existe un usuario registrado con este correo electrónico</string>
    <string name="login__error_wrong_password">Contraseña incorrecta</string>
    <string name="login__error_unknown_error">Algo salió mal, intente de nuevo más tarde</string>
    <string name="login__error_enter_email">Ingrese su correo electrónico.</string>
    <string name="login__error_enter_password">Ingrese su contraseña.</string>

    <string name="text_1">Level 1</string>
    <string name="yourself">Probability</string>
    <string name="signup__header">Crear Cuenta</string>
    <string name="signup__email_hint">Correo electrónico</string>
    <string name="signup__password_hint">Contraseña</string>
    <string name="signup__conf_password">Confirma tu contraseña</string>
    <string name="signup__signup_button">Registrarme</string>
    <string name="signup__signup_successfully">Cuenta creada correctamente</string>
    <string name="signup__error_password_insecure">Tu contraseña debe tener al menos 6 caracteres</string>
    <string name="signup__error_passwords_match">Las contraseñas no coinciden</string>
    <string name="signup__error_email_already_registered">Ya existe una cuenta registrada con este correo electrónico</string>
    <string name="signup__error_unknown_error">Algo salió mal, intente de nuevo más tarde</string>
    <string name="arrow_back">arrow back</string>
    <string name="registrarme">Registrarme</string>
    <string name="policy">Al registrarte estas aceptando todas </string>
    <string name="policy_2"><a href="https://www.termsfeed.com/live/dd1abf75-8f58-489f-b80a-32f1fef4c416">nuestras politicas de privacidad y derechos de autor. </a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_recovery_password">Send recovery password</string>
    <string name="card_image_withouth_importace">card image withouth importace</string>
    <string name="computer_terms_title">Frases basicas</string>
    <string name="useful_verbs">Casual</string>
    <string name="greetings">Conectores</string>
    <string name="daily_routine">Terminar una conversación</string>
    <string name="pg_terms">Asuntos de trabajo</string>
    <string name="social_tech">Social Tech</string>
    <string name="hobbies">Casual 2</string>
    <string name="interviews_beginner">Despues del trabajo </string>
    <string name="code_terms">Poco Tiempo</string>
    <string name="useful_verbs2">Entrevista de trabajo</string>
    <string name="meetings">Cambio de carrera</string>
    <string name="travel">Sobre ti</string>
    <string name="vacations">Opinion</string>
    <string name="recruiter">Probabilidades</string>
    <string name="software">Casual 3</string>
    <string name="algorithms">Lugar</string>
    <string name="interviewsfinal">Entrevista de trabajo 2</string>
    <string name="job_meeting">Reunion de Trabajo</string>
    <string name="this_app">This app was made to help people with real examples of english phrases. This was develop by one developer in months , so if theres a wrong translation please let me know via email. Enjoy the app as much as I did creating it!  </string>
    <string name="all_the_audios">All the audios for this app was thank to the following Youtubers. Im not breaking any policy terms , but if you are the properties from the audios and you have some problem , please let me know and i will respond immediately and assist whatever thing you want to do with those.  </string>
    <string name="lucy"><a href="https://www.youtube.com/@EnglishwithLucy">English with Lucy</a></string>
    <string name="english_speaking_success"><a href="https://www.youtube.com/@EnglishSpeakingSuccess">English Speaking Success</a></string>
    <string name="linkedin">Linkedin</string>
    <string name="perfildecv">Perfil de CV</string>
    <string name="zoom">Charlas por Zoom</string>
    <string name="experienciaconempresas">Experiencia en empresas</string>


</resources>