<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.presentation.sign_up.SignUpFragment">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="181dp" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/pbSignUp"
                style="@style/CircularProgressIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/btnSignUp"
                app:layout_constraintEnd_toEndOf="@id/btnSignUp"
                app:layout_constraintStart_toStartOf="@id/btnSignUp"
                app:layout_constraintTop_toTopOf="@id/btnSignUp"
                tools:visibility="gone" />


            <Button
                android:id="@+id/btnSignUp"
                style="@style/btnSignUpStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_regular"
                android:background="@color/btnSignUp"
                android:text="@string/registrarme"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
                tools:layout_editor_absoluteX="36dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                app:startIconDrawable="@drawable/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:startIconTint="@color/text_icon_hint"
                android:layout_marginHorizontal="36dp"
                android:textColorHint="@color/text_color_hint"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                app:passwordToggleTint="@color/text_color_hint"
                tools:layout_editor_absoluteX="36dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/poppins_light"

                    android:layout_height="wrap_content"
                    android:hint="@string/signup__email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_color_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                app:startIconDrawable="@drawable/password"
                android:layout_marginTop="10dp"
                app:startIconTint="@color/text_icon_hint"
                app:boxBackgroundColor="@color/white"
                android:textColorHint="@color/text_color_hint"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/text_color_hint"
                tools:layout_editor_absoluteX="36dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup__password_hint"
                    android:inputType="textPassword"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/text_color_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/password"
                app:boxBackgroundColor="@color/white"
                app:startIconTint="@color/text_icon_hint"
                android:textColorHint="@color/text_color_hint"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/text_color_hint"
                tools:layout_editor_absoluteX="36dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"

                    android:hint="@string/signup__conf_password"
                    android:inputType="textPassword"
                    android:textColor="@color/text_color_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="15dp"
                android:text="@string/policy"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_light"
                android:textColor="@color/whiteMoreTransparent"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-60dp"
                android:gravity="start|center_horizontal|center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/arrow_back"
                    android:focusable="true"
                    android:src="@drawable/arrow_back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/signup__header"
                    android:textColor="@color/whiteMoreTransparent"
                    android:textSize="25sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>